Fix Typo's in the landing page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -148,10 +148,10 @@
               <h3>A Non-Technical Version</h3>
               <p>
                 Arken is a storage system built to lower the bar needed for sustainably and affordably 
-                hosting and backing up publicly accessible data. Instead of needing a powerful enterprise server
+                host and back up publicly accessible data. Instead of needing a powerful enterprise server
                 Arken can run on almost anything--including a $35 dollar Raspberry Pi. 
-                Utilizing IPFS (The Interplanetary Filesystem) Arken also handles making your content publicly accessible
-                without requiring organizations to register a static ip address or learn how to port forward and setup
+                Utilizing IPFS (the Inter-Planetary Filesystem) Arken also makes content publicly accessible
+                without requiring organizations to register a static ip address or learn to port forward and setup
                 a web server on your own.
 
                 <br>
