Yep grammar again...

--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
               <h2>What is Arken?</h2>
               <h3>A Non-Technical Version</h3>
               <p>
-                Arken is a storage system built to lower the bar needed for sustainably and affordably 
+                Arken is a storage system built to lower the bar needed to sustainably and affordably 
                 host and back up publicly accessible data. Instead of needing a powerful enterprise server
                 Arken can run on almost anything--including a $35 dollar Raspberry Pi. 
                 Utilizing IPFS (the Inter-Planetary Filesystem) Arken also makes content publicly accessible
