--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-  <meta name="description" content="Meet Arken, A Decentralized Digital Archive Built for the World's Scientific Data." />
+  <meta name="description" content="Meet Arken, A Decentralized Digital Archive Built for the World's Open Source and Scientific Data." />
 
   <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
@@ -97,7 +97,7 @@
         <div class="section-wrapper">
           <div class="columns">
             <div>
-              <h3>Meet Arken, A Decentralized Digital Archive Built for the World's Scientific Data.</h3>
+              <h3>Meet Arken, A Decentralized Digital Archive Built for the World's Open Source and Scientific Data.</h3>
             </div>
             <div>
               <div id="graphicHolder"></div>
